maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:32: error: not found: value marqueCases
    marqueCases(x, y + 1, poids + 1)
    ^